# Team-Task-Scheduler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
task_planner/: __main__.py  config.py  data_loader.py  exporter.py  models.py  scheduler.py  utils.py
templates/: afstanden.csv  spelers.csv  taken.csv  wedstrijden.csv
tests/: test_data_loader.py  test_exporter.py  test_main_integration.py  test_models.py  test_scheduler.py  test_utils.py
